data/derived/fa15/progs/unify/prog3411.ml.out
Characters 93-98:
  |h::t -> if List.length t = 0 then h * i @ mulByDigit i t
                                     ^^^^^
Error: This expression has type int but an expression was expected of type
         'a list
